# pyM17

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  codecov.yml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish-pypi.yml
src/m17/: pyproject.toml
src/m17/m17/: __init__.py  __main__.py  address.py  apps.py  audio_test.py  blocks.py  const.py  framer.py  frames.py  misc.py  network.py  sanity_check.py  voipsim.py
src/m17/m17/audio/: __init__.py  blocks.py  codec2.py
src/m17/m17/codec/: __init__.py  convolutional.py  golay.py  interleave.py  puncture.py  randomize.py  viterbi.py
src/m17/m17/core/: __init__.py  address.py  constants.py  crc.py  types.py
src/m17/m17/crypto/: __init__.py  aes.py  scrambler.py  signature.py
src/m17/m17/frames/: __init__.py  bert.py  ip.py  lich.py  lsf.py  packet.py  stream.py
src/m17/m17/net/: __init__.py  client.py  dht.py  p2p.py  reflector.py
src/m17/tests/: conftest.py  test_address.py  test_bert.py  test_blocks.py  test_convolutional.py  test_core_address.py  test_crc.py  test_crypto.py  test_dictdotattribute.py  test_frames.py  test_golay.py  test_integration.py  test_interleave.py  test_ip.py  test_lich.py  test_lsf.py  test_misc.py  test_net.py  test_packet.py  test_puncture.py  test_randomize.py  test_stream.py  test_types.py  test_v3.py  test_viterbi.py
