[tool.poetry]
name = "m17"
version = "0.1.3"
description = "Python M17 Protocol Library - M17 v2.0.3 and v3.0.0 compliant"
authors = ["Luke Stamm <we3dz@we3dz.com>"]
readme = "../../README.md"
license = "MIT"
keywords = ["m17", "amateur-radio", "ham-radio", "digital-voice", "codec2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Ham Radio",
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
pydantic = "^2.9.2"

# Optional dependencies for specific features
# Audio processing
pycodec2 = { version = "^4.0.1", optional = true }
soundcard = { version = "^0.4.3", optional = true }
samplerate = { version = "^0.2.1", optional = true }

# DHT networking
kademlia = { version = "^2.2.2", optional = true }
rpcudp = { version = "^5.0.0", optional = true }

# HTTP requests (for optional features)
requests = { version = "^2.32.3", optional = true }

[tool.poetry.extras]
audio = ["pycodec2", "soundcard", "samplerate"]
dht = ["kademlia", "rpcudp"]
all = ["pycodec2", "soundcard", "samplerate", "kademlia", "rpcudp", "requests"]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.9.0"
mypy-extensions = "^1.0.0"
pyflakes = "3.2.0"
pycodestyle = "^2.11.1"
faker = "^24.4.0"
coverage = "^7.4.4"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
aioresponses = "^0.7.6"
pytest-dotenv = "^0.5.2"
pylint = "^3.3.2"
ruff = "^0.1.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
# Enable strict mode
strict = true
# Keep ignore_missing_imports for external dependencies without stubs
ignore_missing_imports = true

# Per-module overrides for gradual adoption
[[tool.mypy.overrides]]
module = [
    "m17.net.*",
    "m17.audio.*",
]
# Relax strict mode for optional networking and audio modules
# These modules depend on optional external packages (kademlia, pycodec2)
disallow_untyped_defs = false
warn_return_any = false
check_untyped_defs = false
disable_error_code = ["index", "assignment", "type-arg", "attr-defined", "no-untyped-def"]

[[tool.mypy.overrides]]
module = [
    "m17.frames.ip",
    "m17.frames.lich",
    "m17.frames.lsf",
]
# These modules have complex Union[str, Address] typing
# that accepts both strings and Address objects with __post_init__ conversion
# This will be fully addressed in a future refactor
warn_return_any = false
disable_error_code = ["arg-type", "return-value", "union-attr", "type-arg", "no-untyped-def"]

[[tool.mypy.overrides]]
module = ["m17", "m17.__init__"]
# Main init has complex conditional imports and re-exports
disable_error_code = ["misc", "assignment"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4"]
ignore = ["D100", "D104", "D107"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=m17 --cov-report=term-missing"
